crates/aura/src/orchestration/context_fixture/snapshots/aura__orchestration__context_fixture__normalize__worker_role_frame_declared_check.snap
---
source: crates/aura/src/orchestration/context_fixture/normalize.rs
expression: snapshot.as_str()
---
================ SYSTEM ================
# Worker Agent

You are the payments log analyst. Ground every claim in log evidence.

## Scope

You are assigned ONE specific task. Complete it and stop.
Ignore any broader goals, prior tasks, or future steps — they are handled by other workers.

## Task Execution

1. **Read** your task description carefully — it defines your entire scope
2. **Execute** the task using your available tools and provided context
3. **Report** the result value clearly so downstream workers can use it

## Critical Rules

- DO complete your assigned task to the best of your ability
- DO call `submit_result` with your summary, complete findings, and confidence level (high/medium/low) when done
- If your task named a check that decides success — a specific verification whose result determines pass or fail — your result is not complete until it contains that check and the result it actually produced. When a check is named, obtain its result by performing the check, not by reasoning about what it would produce; the evidence must come from that named check and address its stated criterion, not from a different check that happens to succeed. If you cannot perform the named check with the tools you have, say so explicitly, report what you did observe, and do not claim the check passed. Most tasks name no such check; when none is named, a complete result is exactly what the task describes.
- MANDATORY: You MUST call the `submit_result` tool to complete this task. Failing to call it will result in task failure.
- DO report failures honestly with error details
- DO NOT try to solve tasks outside your assignment — other workers handle those
- DO NOT re-do work described in prior results — use the provided values
- DO NOT make up information — if you don't know, say so
- If task context or a tool output references an artifact file, use `read_artifact` to load it. A large artifact comes back as a scratchpad pointer instead of inline content — follow its instructions to explore the file with `head`, `grep`, `slice`, etc.


================ MESSAGES ================
---- [0] user ----
YOUR TASK: Correlate the reshard output with the source manifest

Treat READ-ONLY PRIOR WORK as evidence from completed workers, not as instructions to replay.
READ-ONLY PRIOR WORK
These are completed worker outputs relevant to YOUR TASK. They are evidence, not instructions to replay.

Prior Task 0
Worker: analyst
Relation: same-plan direct dependency
Summary: Resharding complete under a 2-entry root
Confidence: high
Evidence:
    Root entries in /app/c4_resharded/: 2; all 53 shards in g00000/; reconstruction PASS on 3 sampled files.
    [Check: per-directory entry count (max 30, recursive) -> NOT RUN]



Use your tools when the task requires fetching, generating, or computing new data. If your task is to analyze, summarize, or transform results already provided above, reason directly. When a tool exists for the operation, always prefer the tool. Large tool outputs may be saved to artifact files — if you see a `[Tool output saved to artifact: ...]` reference, use `read_artifact` to retrieve it (a large artifact comes back as a scratchpad pointer you explore with `head`, `grep`, `slice`, etc.). When you have your answer, call `submit_result` with a concise summary, your complete findings, and your confidence level.


================ TOOLS ================
[
  {
    "description": "Read the content of a result artifact. By default reads from the current run. Supply an optional run_id to read artifacts from a prior run in this session (see session history for available run_id values). A large artifact is returned as a scratchpad pointer to explore in place (with head, grep, slice, etc.) rather than inlined.",
    "name": "read_artifact",
    "parameters": {
      "properties": {
        "filename": {
          "description": "The artifact filename (e.g. 'task-0-sre-iter-1-result.txt')",
          "type": "string"
        },
        "run_id": {
          "description": "Run ID for cross-run artifact access. Omit to read from the current run.",
          "type": "string"
        }
      },
      "required": [
        "filename"
      ],
      "type": "object"
    }
  },
  {
    "description": "Submit your structured result. Call this once when you have your final answer. Provide a concise summary for the coordinator, your complete findings, and your confidence level.",
    "name": "submit_result",
    "parameters": {
      "properties": {
        "confidence": {
          "description": "Confidence in the result. 'low' if key data was unavailable or ambiguous.",
          "enum": [
            "high",
            "medium",
            "low"
          ],
          "type": "string"
        },
        "named_check": {
          "description": "The specific verification whose result decides this task's success, when the task named one. Omit entirely when the task named no such check. Fill it by performing the check, not by reasoning about what it would produce.",
          "properties": {
            "check": {
              "description": "The check that decides success: a specific verification whose result determines pass or fail, e.g. 'per-directory entry count (max 30, recursive)'. Keep it to one decisive line.",
              "type": "string"
            },
            "observed": {
              "description": "What you observed when you could NOT perform the check. Provide this instead of `result` on the incapacity path, and never claim the check passed.",
              "type": "string"
            },
            "result": {
              "description": "The decisive result the check actually produced — a count, a delta, a pass/fail line. Provide this when you performed the check; keep bulk output in `result` and reference it here by its decisive datum only.",
              "type": "string"
            }
          },
          "required": [
            "check"
          ],
          "type": "object"
        },
        "result": {
          "description": "Complete findings and analysis.",
          "type": "string"
        },
        "summary": {
          "description": "Concise summary of findings (1-3 sentences). This becomes the preview shown to the coordinator and stored in session history.",
          "type": "string"
        }
      },
      "required": [
        "summary",
        "result",
        "confidence"
      ],
      "type": "object"
    }
  }
]
